--- a/src/ProgressPal/webapp/static/css/styles.css
+++ b/src/ProgressPal/webapp/static/css/styles.css
@@ -100,27 +100,18 @@ button, a {
   margin-left: 10px;
 }
 .app-icon {
-  width: 26px;
+  width: 40px;
   height: 2px;
-  border-radius: 4px;
-  background-color: var(--main-color);
-  position: relative;
+
 }
-.app-icon:before, .app-icon:after {
-  content: "";
-  position: absolute;
-  width: 12px;
-  height: 2px;
-  border-radius: 4px;
-  background-color: var(--main-color);
-  left: 50%;
-  transform: translatex(-50%);
-}
-.app-icon:before {
-  top: -6px;
-}
-.app-icon:after {
-  bottom: -6px;
+
+.icon-media {
+    display: inline-block;
+    width: 50px; /* Set the width of the icon */
+    height: 50px; /* Set the height of the icon */
+    background-image: url('/static/media/ProgressPalIcon.png'); /* Path to your icon */
+    background-size: contain; /* Ensure the icon fits within the span */
+    background-repeat: no-repeat; /* Prevent the background from repeating */
 }
 .app-name {
   color: var(--main-color);
