--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -13,7 +13,7 @@
     <div class="app-container">
         <div class="app-header">
           <div class="app-header-left">
-            <span class="app-icon"></span>
+            <span class="app-icon icon-media"></span>
             <p class="app-name">ProgressPal</p>
             <div class="search-wrapper">
               <input class="search-input" type="text" placeholder="Search">
