--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -32,7 +32,7 @@
               </svg>
             </button>
             <form action="/shutdown" method="post">
-            <button class="shutdown-btn", type="submit">
+            <button class="shutdown-btn mode-switch.active", type="submit">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 50 50" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
                 <path d="M14.5 8C13.8406 8.37652 13.2062 8.79103 12.6 9.24051C11.5625 10.0097 10.6074 10.8814 9.75 11.8402C6.79377 15.1463 5 19.4891 5 24.2455C5 34.6033 13.5066 43 24 43C34.4934 43 43 34.6033 43 24.2455C43 19.4891 41.2062 15.1463 38.25 11.8402C37.3926 10.8814 36.4375 10.0097 35.4 9.24051C34.7938 8.79103 34.1594 8.37652 33.5 8" stroke="#000000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
       <path d="M24 4V24" stroke="#000000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -82,15 +82,15 @@
               <div class="projects-status">
                 <div class="item-status">
                   <span class="status-number in-progress-tasks-number">0</span>
-                  <span class="status-type">In Progress</span>
+                  <span class="status-type status-type-progress">In Progress</span>
                 </div>
                 <div class="item-status">
                   <span class="status-number completed-tasks-number">0</span>
-                  <span class="status-type">Completed</span>
+                  <span class="status-type status-type-completed">Completed</span>
                 </div>
                 <div class="item-status">
                   <span class="status-number total-tasks-number">0</span>
-                  <span class="status-type">Total Trackers</span>
+                  <span class="status-type ">Total Trackers</span>
                 </div>
               </div>
               <div class="view-actions">
