--- a/src/ProgressPal/webapp/static/css/looptilestyle.css
+++ b/src/ProgressPal/webapp/static/css/looptilestyle.css
@@ -1,7 +1,6 @@
-
-
 .project-boxes.jsGridView .tile-wrapper {
   width: 33.3%; /*original 33.3% */
+  
 }
 
 .tile-wrapper {
@@ -123,14 +122,31 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
+  flex-shrink: 0;
 }
 .loop-tile-content-header-left {
   display: flex;
   flex-direction: column;
+  width: 23%;
+  max-width: 23%;
+  min-width: 23%;
 }
 
 .loop-tile-content-header-left p {
   margin: 0;
+  white-space: nowrap;        /* Prevents text from wrapping */
+  overflow: hidden;           /* Hides overflow text */
+  text-overflow: ellipsis;    /* Adds ellipsis (...) to overflow */
+  width: 100%;
+
+}
+
+.project-boxes.jsListView .loop-tile-content-header-left {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: unset;
+  min-width: unset;
 }
 
 .loop-tile-content-header-right {
@@ -140,6 +156,37 @@
   width: 24px;
   height: 24px;
   margin-right: 8px;
+}
+
+.loop-tile-content-header-center {
+  display: flex;
+  /* background-color: grey; */
+  margin-right: 30px;
+  margin-left: 8px;
+  width: 90%;
+
+  visibility: visible;
+}
+
+.loop-tile-content-header-canvas {
+  position: relative;
+  align-self: center;
+  background-color: var(--main-color);
+  border-color: var(--main-color-card);
+  margin-right: 8px;
+  border-radius: 10px;
+  
+  width: 100%; /* Make the canvas fill its flexbox container in width */
+  height: 100%; /* Ensure the canvas inherits the flexbox height */
+  flex-shrink: 0;
+}
+
+.project-boxes.jsListView .loop-tile-content-header-center {
+  visibility: hidden;
+}
+
+.project-boxes.jsListView .loop-tile-content-header-canvas {
+  visibility: hidden;
 }
 
 .project-boxes.jsListView .loop-type-icon {
@@ -275,4 +322,8 @@
   margin-bottom: 10px;
   font-weight: 700;
   color: var(--tile-badge-text-color)
+}
+
+.overhead-percentage {
+  margin-top: 5px;
 }
