--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -19,7 +19,7 @@
             <span class="app-icon icon-media"></span>
             <p class="app-name">ProgressPal</p>
             <div class="search-wrapper">
-              <input class="search-input" type="text" placeholder="Search">
+              <input class="search-input" id="search-input" type="text" placeholder="Search">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-search" viewBox="0 0 24 24">
                 <defs></defs>
                 <circle cx="11" cy="11" r="8"></circle>
