--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -77,17 +77,17 @@
               <div class="projects-section-header-left">
                 
                
-                <div class="projects-status">
+                <div class="projects-status ">
                   <p class="pagetitle">Iterables</p>
-                  <div class="item-status">
+                  <div class="item-status in-progress-tasks-section">
                     <span class="status-number in-progress-tasks-number">0</span>
                     <span class="status-type status-type-progress">In Progress</span>
                   </div>
-                  <div class="item-status">
+                  <div class="item-status completed-tasks-section">
                     <span class="status-number completed-tasks-number">0</span>
                     <span class="status-type status-type-completed">Completed</span>
                   </div>
-                  <div class="item-status">
+                  <div class="item-status total-tasks-section">
                     <span class="status-number total-tasks-number">0</span>
                     <span class="status-type ">Total Trackers</span>
                   </div>
