--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -94,11 +94,17 @@
               </div>
             </div>
             <div class="projects-section-line">
-              
+
               </div>
               <div class="view-actions">
-                
 
+                <button class="view-btn export-logs-button" title="Export Logs">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download">
+                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                    <polyline points="7 10 12 15 17 10" />
+                    <line x1="12" y1="15" x2="12" y2="3" />
+                  </svg>
+                </button>
 
                 <button class="view-btn list-view" title="List View">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list">
