--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" , class ="dark">
+<html lang="en" , class ="secondary">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProgressPal</title>
+    <link rel="stylesheet"  href="{{ url_for('static', filename='css/themes.css') }}">
     <link rel="stylesheet"  href="{{ url_for('static', filename='css/pagestyle.css') }}">
+    
     <link rel="stylesheet" id = "tilesstylesheetlink" href="{{ url_for('static', filename='css/looptilestyle.css') }}">
     <script src="{{ url_for('static', filename='js/pageUI.js') }}"></script>
     <script id = "tilejavascriptlink"  src="{{ url_for('static', filename='js/looptiles.js') }}"></script>
