--- a/src/ProgressPal/webapp/static/css/pagestyle.css
+++ b/src/ProgressPal/webapp/static/css/pagestyle.css
@@ -14,57 +14,6 @@
 */
 
 
-:root {
-  --app-container: #f3f6fd;
-  --main-color: #1f1c2e;
-  --secondary-color: #4A4A4A;
-  --link-color: #1f1c2e;
-  --link-color-hover: #c3cff4;
-  --link-color-active: #fff;
-  --link-color-active-bg: #1f1c2e;
-  --projects-section:rgba(165, 165, 165, 0.6);
-  --message-box-hover: #fafcff;
-  --message-box-border: #e9ebf0;
-  --more-list-bg: #fff;
-  --more-list-bg-hover: #f6fbff;
-  --more-list-shadow: rgba(209, 209, 209, 0.4);
-  --button-bg: #1f1c24;
-  --search-area-bg: #fff;
-  --star: #1ff1c2e;
-  --tile-color:  #f3f6fd;
-  --tile-in-progress-color: rgba(194, 242, 172, 0.5);
-  --tile-completed-color: rgba(50, 169, 217, 0.5);
-  --tile-badge-background-color: rgba(165, 165, 165, 0.6);
-  --tile-badge-text-color: #0D0D0D;
-  
-  
-  
-}
-
-.dark:root {
- 
-  --app-container: #111827;
-  --main-color: #fff;
-  --secondary-color: rgba(255,255,255,.8);
-  --projects-section: #1f2937;
-  --link-color: rgba(255,255,255,.8);
-  --link-color-hover: rgba(195, 207, 244, 0.1);
-  --link-color-active-bg: rgba(195, 207, 244, 0.2);
-  --button-bg: #1f2937;
-  --search-area-bg: #1f2937;
-  --message-box-hover: #243244;
-  --message-box-border: rgba(255,255,255,.1);
-  --star: #ffd92c;
-  --light-font: rgba(255,255,255,.8);
-  --more-list-bg: #2f3142;
-  --more-list-bg-hover: rgba(195, 207, 244, 0.1);
-  --more-list-shadow: rgba(195, 207, 244, 0.1);
-  --message-btn: rgba(195, 207, 244, 0.1);
-  --tile-color: #111827;
-  --tile-badge-background-color: var(--projects-section);
-  --tile-badge-text-color: var(--main-color);
-}
-
 html, body {
   width: 100%;
   height: 100vh;
@@ -166,9 +115,7 @@ button, a {
   box-shadow: 0 2px 6px 0 rgba(136, 148, 171, 0.2), 0 24px 20px -24px rgba(71, 82, 107, 0.1);
   overflow: hidden;
 }
-.dark .search-wrapper {
-  box-shadow: none;
-}
+
 
 
 .search-input {
@@ -198,8 +145,8 @@ button, a {
   align-items: center;
 }
 
-.dark .shutdown-btn svg{
-  stroke: white;
+.shutdown-btn svg{
+  stroke: var(--main-color);
 }
 
 
@@ -246,7 +193,7 @@ button, a {
 }
 
 /* add dark mode support */
-.dark .app-sidebar-link svg {
+.app-sidebar-link svg {
   fill: var(--secondary-color);
 }
 
