added screensaver for empty tab (iterable,function, no logs yet) - End of day commit

--- a/src/ProgressPal/webapp/static/css/functiontilestyle.css
+++ b/src/ProgressPal/webapp/static/css/functiontilestyle.css
@@ -492,3 +492,38 @@
     
 }
 
+.placeholder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: var(--main-color);
+  font-size: 16px;
+}
+
+.placeholder-image {
+  width: 50%;
+  height: 50%;
+  
+}
+
+.placeholder-image img {
+  width: 50%;
+  height: 50%;
+
+}
+
+.placeholder-image img svg {
+  fill: black;
+  color: black;
+}
+
+
+.placeholder-text {
+  font-size: 34px;
+  stroke: var(--main-color);
+  font-weight: 20;
+}
