--- a/src/ProgressPal/webapp/static/css/looptilestyle.css
+++ b/src/ProgressPal/webapp/static/css/looptilestyle.css
@@ -355,3 +355,32 @@
 .hidden {
   display: none;
 }
+
+
+.placeholder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: var(--main-color);
+  font-size: 16px;
+}
+
+.placeholder-image {
+  width: 50%;
+  height: 50%;
+}
+
+.placeholder-image svg {
+
+  stroke-width: 0px;
+}
+
+.placeholder-text {
+  font-size: 34px;
+  stroke: var(--main-color);
+  font-weight: 20;
+}
