--- a/src/ProgressPal/webapp/static/css/logtilestyle.css
+++ b/src/ProgressPal/webapp/static/css/logtilestyle.css
@@ -100,7 +100,7 @@
   .placeholder-image {
     width: 50%;
     height: 50%;
-    
+    filter: drop-shadow(9px 15px 6px rgb(0 0 0 / 0.4));
   }
   
   .placeholder-image img {
@@ -112,6 +112,7 @@
   .placeholder-image img svg {
     fill: black;
     color: black;
+    ;
   }
   
   
