Enhance UI with hamburger menu and responsive design; update logging examples and refactor code for clarity

--- a/src/ProgressPal/webapp/templates/index.html
+++ b/src/ProgressPal/webapp/templates/index.html
@@ -17,7 +17,13 @@
 
     <div class="app-container">
         <div class="app-header">
+          <div class="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
           <div class="app-header-left">
+          
             <span class="app-icon icon-media"></span>
             <p class="app-name">ProgressPal</p>
             <div class="search-wrapper">
@@ -44,6 +50,7 @@
 
         </div>
         <div class="app-content">
+
           <div class="app-sidebar">
             <a  class="app-sidebar-link active "  data-resource="looptracker"> 
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="-4 -4 128 128" fill="None" stroke="currentColor" stroke-width="0" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
