--- a/src/ProgressPal/webapp/static/css/pagestyle.css
+++ b/src/ProgressPal/webapp/static/css/pagestyle.css
@@ -355,6 +355,23 @@ button, a {
   margin-right: 10px;
 }
 
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.hamburger-menu span {
+  width: 100%;
+  height: 3px;
+  background-color: var(--main-color);
+  border-radius: 2px;
+}
+
 
 @media screen and (max-width: 980px) {
 
@@ -393,9 +410,30 @@ button, a {
     margin-left: 4px;
   }
 
+  .app-icon {
+    display: none;
+  }
+
 
 }
 @media screen and (max-width: 520px) {
+
+  .hamburger-menu {
+    display: flex;
+  }
+  .app-sidebar, .app-icon {
+    display: none;
+  }
+
+
+
+  .app-sidebar.active {
+    display: flex;
+
+    padding-top: 0px;
+    padding-right: 5px;
+    padding-left: 0px;
+  }
   .projects-section {
     overflow: auto;
   }
@@ -426,9 +464,7 @@ button, a {
     padding: 24px 16px 0 16px;
   }
 
-  .app-header {
-    padding: 10px;
-  }
+
   .projects-section-header p,
 .projects-section-header .time {
     font-size: 18px;
